fixing menu on mobile

--- a/styles.css
+++ b/styles.css
@@ -2475,7 +2475,7 @@ h3,
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 1.5rem;
+    gap: 1rem;
     padding: 2rem 1rem;
   }
 
@@ -2502,7 +2502,7 @@ h3,
     justify-content: center;
     padding-bottom: 3rem;
     border-top: 1px solid rgba(255, 255, 255, 0.2);
-    margin-top: 2rem;
+    margin-top: 1rem;
   }
 
   .overlay-footer.social-links a {
